# gen_gt_mesh

./: CMakeLists.txt  README.md  build_gt_mesh copy.py  build_gt_mesh.py  range_image_normal.py
src/: ConvexHullOperation.cpp  ExplicitRec.cpp  ExplicitRec.h  GHPR.cpp  GHPR.h  MeshOperation.h  MeshSample.h  gen_normal.cpp  gen_normal.h  gen_normal_map.cpp
